rest request update smoothie
